apps/heartbeats/networkpolicies/heartbeats.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: heartbeats
  namespace: heartbeats
spec:
  endpointSelector:
    matchLabels:
      app: heartbeats
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8090"
              protocol: TCP
    - fromEndpoints: # allow push from alertmanager directly to heartbeats (watchdog)
        - matchLabels:
            app.kubernetes.io/name: alertmanager
            app.kubernetes.io/instance: kube-prometheus-stack-alertmanager
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: hooks.slack.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
