apps/heartbeats/networkpolicies/traefik-egress-heartbeats.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-heartbeats
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            serviceName: heartbeats
            namespace: heartbeats
      toPorts:
        - ports:
            - port: "8090"
              protocol: TCP
